--- a/app/templates/mytemplate/less/_pagination.less
+++ b/app/templates/mytemplate/less/_pagination.less
@@ -36,14 +36,15 @@
 	.page { 
 	}
 	.limit {
-		padding: 0.5em 0.75em;
+		display: none;
+		/* padding: 0.5em 0.75em;
 		padding-right: @baseFontSize;
 		color: @paginationColor;
 		float: right;
 
 		select {
 			width: auto;
-		}
+		} */
 	}
 	.start {
 		margin-left: 0;
