--- a/app/templates/mytemplate/less/index.less
+++ b/app/templates/mytemplate/less/index.less
@@ -224,6 +224,9 @@ table {
 // Search box
 @import "_search.less";
 
+//responsive vertical images
+@import "_vimages.less";
+
 // Sub-masthead/breadcrumbs
 @import "_breadcrumbs.less";
 
