Styling for news/job articles: Changed width to be dynamically based on viewport width, added light grey background to article container

--- a/app/templates/mytemplate/less/index.less
+++ b/app/templates/mytemplate/less/index.less
@@ -540,6 +540,9 @@ header.content-header ul,
 	background: transparent;
 }
 
+// Category Blog styling for leading articles
+@import "_category_blog.less";
+
 // Utilities
 @import "../../../../core/assets/less/utilities.less";
 
