--- a/app/templates/mytemplate/less/_masthead.less
+++ b/app/templates/mytemplate/less/_masthead.less
@@ -9,7 +9,7 @@
 // --------------------------------------------------
 
 #masthead {
-	background: #fff;
+	background: #2D3E50;
 	color: #444;
 	margin: 0;
 	padding: 0;
