--- a/app/templates/mytemplate/less/_menu.less
+++ b/app/templates/mytemplate/less/_menu.less
@@ -32,9 +32,11 @@
 	}
 	ul.menu {
 		z-index: 797;
-		float: left;
+		float:right;
 		padding: 0;
 		font-weight: 400;
+		width: 50%;
+		margin-right: auto;
 
 		span.separator {
 			display: block;
@@ -45,7 +47,7 @@
 		a {
 			display: block;
 			border: none;
-			color: #666;
+			color: rgba(255, 255, 255, 0.75);
 			font-size: 1em;
 			text-transform: uppercase;
 			font-weight: 500;
@@ -132,7 +134,7 @@
 		&>li:hover,
 		&>li:focus {
 			&>a {
-				color: #222;
+				color: #4FB3D9;
 			}
 		}
 
@@ -173,6 +175,7 @@
 			font-size: 1.5em;
 			padding: 0.85em 0.9em 0.8em 0.9em;
 			display: block;
+			color: rgba(255, 255, 255, 0.75);
 		}
 
 		ul.menu {
@@ -182,7 +185,6 @@
 			top: 100%;
 			left: 0;
 			right: 0;
-			background: #fff;
 
 			&>li {
 				float: none;
@@ -223,7 +225,7 @@
 
 		&.active,
 		&:hover {
-			background: #fff;
+			background: #2D3E50;
 			color: #222;
 
 			ul.menu>li {
