--- a/app/templates/mytemplate/less/_category_blog.less
+++ b/app/templates/mytemplate/less/_category_blog.less
@@ -15,18 +15,34 @@
 }
 
 @media (max-width: 500px) {
+    .blog>.pagination{
+        width: 100%;
+    }
+
     .items-leading>[class^="leading-"] {
         width: 100%;
     }
 }
 
 @media (min-width: 501px) and (max-width: 1000px) {
+    .blog>.pagination{
+        width: ~"calc(100% - 0.6 * (100vw - 500px))";
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
     .items-leading>[class^="leading-"] {
         width: ~"calc(100% - 0.6 * (100vw - 500px))";
     }
 }
 
 @media (min-width: 1001px) {
+    .blog>.pagination{
+        width: 66%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     .items-leading>[class^="leading-"] {
         width: 66%;
     }
