--- a/app/templates/landing/less/_masthead.less
+++ b/app/templates/landing/less/_masthead.less
@@ -1,53 +1,52 @@
-//
-// @package     hubzero-cms
-// @file        templates/mytemplate/less/_masthead.less
-// @copyright   Copyright 2005-2015 HUBzero Foundation, LLC.
-// @license     http://opensource.org/licenses/MIT MIT
-//
+/**
+ * @package    hubzero-cms
+ * @copyright  Copyright 2005-2019 HUBzero Foundation, LLC.
+ * @license    http://opensource.org/licenses/MIT MIT
+ */
 
 //
 // Masthead
 // --------------------------------------------------
 
 #masthead {
-	background: #fff;
-	color: #444;
-	margin: 0;
-	padding: 0;
-	z-index: 999;
+	background: #2D3E50;
+	color     : #444;
+	margin    : 0;
+	padding   : 0;
+	z-index   : 999;
 	.transition(all 0.3s ease);
 	.clearfix();
-	border: none;
+	border  : none;
 	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
+	top     : 0;
+	left    : 0;
+	right   : 0;
 
 	h1 {
-		margin: 0;
-		padding: 0 @spacing;
-		float: left;
-		line-height: 1;
+		margin        : 0;
+		padding       : 0 @spacing;
+		float         : left;
+		line-height   : 1;
 		text-transform: lowercase;
-		font-family: "Kaushan Script", "BlackJack", cursive;
-		font-weight: normal;
-		font-style: normal;
-		font-size: 2em;
+		font-family   : "Kaushan Script", "BlackJack", cursive;
+		font-weight   : normal;
+		font-style    : normal;
+		font-size     : 2em;
 
 		a {
-			position: relative;
-			display: block;
-			background: transparent;
-			border: none;
+			position   : relative;
+			display    : block;
+			background : transparent;
+			border     : none;
 			font-weight: normal;
-			font-style: normal;
-			padding: 0.5em 0;
-			color: #444;
+			font-style : normal;
+			padding    : 0.5em 0;
+			color      : #444;
 			.transition(all 0.3s ease);
 
 			&:hover {
 				text-decoration: none;
-				border: none;
+				border         : none;
 			}
 		}
 	}
@@ -63,133 +62,157 @@
 	}
 }
 
-@media (min-width: 70em) {
+/*@media (min-width: 70em) {
 	#masthead h1 {
 		padding-left: @gutter;
 	}
-}
+}*/
 
 //
 // Prime Nav
 // --------------------------------------------------
+.icon-login:before {
+	content: "\f007";
+}
+
+.icon-logout:before {
+	content: "\f011";
+}
+
+.icon-register:before {
+	content: "\270D";
+}
 
 #account {
-	float: right;
+	float     : right;
 	list-style: none;
-	margin: 0 @spacing 0 0;
-	padding: 0;
-	position: relative;
-	z-index: 798;
+	margin    : 0 @spacing 0 0;
+	padding   : 0;
+	position  : relative;
+	z-index   : 798;
 
 	&.loggedin {
 		cursor: pointer;
 	}
 
 	a:hover,
-	a:focus { 
+	a:focus {
 		color: #111;
 	}
 
 	img {
-		margin: 0;
+		margin : 0;
 		padding: 0;
-		border: 2px solid rgba(0, 0, 0, 0.4);
+		border : 2px solid rgba(0, 0, 0, 0.4);
 		.border-radius(50%);
 	}
 
+	.admin img {
+		border-color: #f8d201;
+	}
+
 	li {
-		list-style: none;
-		margin: 0 0 0 .5em;
-		padding: 0;
-		float: left;
+		list-style : none;
+		margin     : 0 0 0 .5em;
+		padding    : 0;
+		float      : left;
 		line-height: 1;
 
 		&>a {
-			display: block;
-			border: none;
-			color: #666;
-			line-height: 2.85;
-			font-size: 1.4em;
-			width: 2em;
-			padding: 0 0 0 1em;
-			overflow: hidden;
+			display    : block;
+			border     : none;
+			color      : rgba(255, 255, 255, 0.75);
+			line-height: 64px;
+			font-size  : 1.6em;
+			width      : 2em;
+			padding    : 0 0 0 1em;
+			overflow   : hidden;
 			white-space: nowrap;
 
 			&:before {
-				content: "";
-				font-family: "Fontcons";
 				margin-right: 0.5em;
-				font-size: 1em;
-			}
-
-			&.icon-search:before {
-				content: "\f002";
-			}
-			&.icon-login:before {
-				content: "\f007";
-			}
-			&.icon-register:before {
-				content: "\270D";
+				font-size   : 1em;
 			}
 
 			&:hover,
 			&:focus {
-				color: #222;
+				color: #4FB3D9;
 			}
 		}
 
-		ul {
-			position: absolute;
+		.user-account-badge {
+			position   : absolute;
+			top        : 1.3em;
+			left       : 105%;
+			overflow   : hidden;
+			width      : 1.5em;
+			height     : 1.5em;
+			color      : #f8d201;
+			line-height: 1;
+			padding    : 0.2em 0.3em;
+			border     : none;
+
+			&:before {
+				margin-right: 1em;
+			}
+
+			&:hover {
+				border: none;
+			}
+		}
+
+		.user-account-options {
+			position  : absolute;
 			visibility: hidden;
-			width: 200px;
-			right: 0px;
-			top: 100%;
+			width     : 200px;
+			right     : 0;
+			top       : 100%;
 			background: #222;
 			background: rgba(0, 0, 0, 0.9);
 			border-top: 2px solid #ccc;
+			color     : #bbb;
 
-			li {
-				float: none;
-				border: none;
+			.user-account-details {
+				padding      : 1em;
+				border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 
-				a {
+				span {
 					display: block;
-					color: #bbb;
-					color: rgba(255, 255, 255, 0.6);
-					position: relative;
-					font-size: 1em;
-					width: auto;
-					line-height: 1;
+					padding: 0.2em 0;
+				}
+
+				.user-account-email {
+					color    : #999;
+					font-size: 0.85em;
+				}
+			}
+
+			ul {
+				list-style: none;
+				margin    : 0;
+
+				li {
+					float : none;
 					border: none;
-					padding: 0.8em 1em;
-					.transition(color 0.3s ease);
+					margin: 0;
 
-					&:hover,
-					&:focus {
-						color: #fff;
-					}
-					&:before {
-						content: "";
-						display: inline-block;
-						font-family: 'Fontcons';
-						font-size: 1.2em;
-						width: 1em;
-						height: 1em;
-						margin-right: 0.2em;
-					}
-				}
+					a {
+						display    : block;
+						color      : #bbb;
+						color      : rgba(255, 255, 255, 0.6);
+						position   : relative;
+						font-size  : 1em;
+						width      : auto;
+						line-height: 1;
+						border     : none;
+						padding    : 0.8em 1em;
+						.transition(color 0.3s ease);
 
-				&#account-dashboard a:before {
-					content: "\f009";
-				}
-				&#account-profile a:before {
-					content: "\f007";
-				}
-				&#account-messages a:before {
-					content: "\2709";
-				}
-				&#account-logout a:before {
-					content: "\f011";
+						&:hover,
+						&:focus {
+							color: #fff;
+						}
+					}
 				}
 			}
 		}
@@ -198,12 +221,12 @@
 			display: none;
 		}
 
-		&:hover > ul,
-		&:focus > ul,
-		&:hover > form,
-		&:focus > form {
+		&:hover>.user-account-options,
+		&:focus>.user-account-options,
+		&:hover>form,
+		&:focus>form {
 			visibility: visible;
-			display: block;
+			display   : block;
 		}
 
 		&:hover img,
@@ -220,14 +243,10 @@
 			}
 		}
 	}
-
-	.account-details {
-		display: none;
-	}
 }
 
-@media (min-width: 70em) {
+/*@media (min-width: 70em) {
 	#account {
 		margin: 0 @gutter 0 0;
 	}
-}
+}*/
