--- a/app/templates/landing/less/_menu.less
+++ b/app/templates/landing/less/_menu.less
@@ -1,9 +1,8 @@
-//
-// @package     hubzero-cms
-// @file        templates/mytemplate/less/_menu.less
-// @copyright   Copyright 2005-2015 HUBzero Foundation, LLC.
-// @license     http://opensource.org/licenses/MIT MIT
-//
+/**
+ * @package    hubzero-cms
+ * @copyright  Copyright 2005-2019 HUBzero Foundation, LLC.
+ * @license    http://opensource.org/licenses/MIT MIT
+ */
 
 //
 // Menu
@@ -11,13 +10,13 @@
 
 #nav {
 	padding: 0;
-	margin: 0;
+	margin : 0;
 
 	&:after {
-		content: "";
-		display: table;
+		content    : "";
+		display    : table;
 		line-height: 0;
-		clear: both;
+		clear      : both;
 	}
 
 	h2 {
@@ -28,46 +27,48 @@
 	ul.menu li,
 	ul.menu ul {
 		list-style: none;
-		margin: 0;
-		padding: 0;
+		margin    : 0;
+		padding   : 0;
 	}
+
 	ul.menu {
-		z-index: 797;
-		float: left;
-		padding: 0;
-		font-weight: 400;
+		float       : right;
+		z-index     : 797;
+		padding     : 0;
+		font-weight : 400;
+		width       : 45%;
+		margin-right: auto;
 
 		span.separator {
 			display: block;
 			padding: 0.8em 1em;
-			border: none;
+			border : none;
 		}
 
 		a {
-			display: block;
-			border: none;
-			color: #666;
-			font-size: 1em;
+			display       : block;
+			border        : none;
+			color         : rgba(255, 255, 255, 0.75);
 			text-transform: uppercase;
-			font-weight: 500;
+			font-weight   : 500;
 			letter-spacing: 0.075em;
-			padding: 0 1em;
-			line-height: 4em;
+			padding       : 0 1em;
+			line-height   : 64px;
 		}
 
 		li {
-			float: left;
-			line-height: 1.3em;
+			float         : left;
+			line-height   : 1.3em;
 			vertical-align: middle;
-			position: relative;
-			zoom: 1;
-			padding: 0;
-			border: none;
+			position      : relative;
+			zoom          : 1;
+			padding       : 0;
+			border        : none;
 
 			&:hover,
 			&:focus {
 				z-index: 799;
-				cursor: default;
+				cursor : default;
 
 				&>ul {
 					visibility: visible;
@@ -78,29 +79,29 @@
 		// Second level
 		ul {
 			visibility: hidden;
-			position: absolute;
-			top: 100%;
-			left: 0;
-			z-index: 798;
-			width: 16em;
-			padding: 0;
+			position  : absolute;
+			top       : 100%;
+			left      : 0;
+			z-index   : 798;
+			width     : 16em;
+			padding   : 0;
 			background: #222;
 			background: rgba(0, 0, 0, 0.9);
 			border-top: 2px solid #ccc;
 
 			li {
-				float: none;
+				float      : none;
 				font-weight: normal;
 
 				a {
-					padding: 0.8em 1em;
+					padding       : 0.8em 1em;
 					text-transform: none;
-					line-height: 1;
-					color: #bbb;
-					color: rgba(255, 255, 255, 0.6);
-					border: none;
-					font-size: 1em;
-					font-weight: 400;
+					line-height   : 1;
+					color         : #bbb;
+					color         : rgba(255, 255, 255, 0.6);
+					border        : none;
+					font-size     : 1em;
+					font-weight   : 400;
 					letter-spacing: 0;
 					.transition(color 0.3s ease);
 				}
@@ -108,14 +109,14 @@
 				// Arrow indicating another level
 				&.parent>a:after {
 					font-family: 'Fontcons';
-					content: "\203A";
-					font-size: 0.85em;
+					content    : "\203A";
+					font-size  : 0.85em;
 					line-height: 1.2em;
-					display: block;
-					float: right;
-					width: 1em;
-					height: 1em;
-					text-align: right;
+					display    : block;
+					float      : right;
+					width      : 1em;
+					height     : 1em;
+					text-align : right;
 				}
 
 				&:hover>a,
@@ -123,9 +124,10 @@
 					color: #fff;
 				}
 			}
+
 			// Third level
 			ul {
-				top: 0;
+				top : 0;
 				left: 99%;
 			}
 		}
@@ -133,28 +135,29 @@
 		&>li:hover,
 		&>li:focus {
 			&>a {
-				color: #222;
+				color: #4FB3D9;
 			}
 		}
 
 		.toggle {
 			font-family: 'Fontcons';
-			display: none;
-			font-size: 0.85em;
+			display    : none;
+			font-size  : 0.85em;
 			line-height: 1.2em;
-			background: #e1e1e1;
-			background: rgba(0, 0, 0, 0.1);
-			position: absolute;
-			top: 1em;
-			right: 1em;
-			padding: 1em;
-			width: 2.7em;
-			height: 3em;
+			background : #e1e1e1;
+			background : rgba(0, 0, 0, 0.1);
+			position   : absolute;
+			top        : 1em;
+			right      : 1em;
+			padding    : 1em;
+			width      : 2.7em;
+			height     : 3em;
 
 			&:before {
 				content: "\203A";
 			}
 		}
+
 		.active>.toggle {
 			&:before {
 				content: "\2304";
@@ -163,44 +166,91 @@
 	}
 }
 
-@media (max-width: 60em) {
+#external {
+	float: right;
+
+	li {
+		display   : inline;
+		list-style: none;
+	}
+
+	a:hover {
+		border-bottom: none;
+	}
+
+	img {
+		// compliance with branding requirements, but don't make it larger
+		min-width : 32px;
+		min-height: 32px;
+		max-width : 32px;
+		max-height: 32px;
+		margin    : 16px;
+	}
+}
+
+@media (max-width: 32.75em) {
+	#nav {
+		margin-left : auto;
+		margin-right: auto;
+		width       : 100%;
+	}
+}
+
+@media (min-width: 32.75em) and (max-width: 60em) {
 	#nav {
 		float: left;
+	}
+}
+
+@media (max-width: 60em) {
+	#nav {
 		cursor: pointer;
 
 		&:before {
-			content: "\f036";
+			content    : "\f036";
 			font-family: "Fontcons";
-			font-size: 1.5em;
-			padding: 0.85em 0.9em 0.8em 0.9em;
-			display: block;
+			font-size  : 1.6em;
+			padding    : 1.2em 0.9em 0.8em 0.9em;
+			display    : inline-block;
+			color      : rgba(255, 255, 255, 0.75);
+
+			&:hover {
+				color: #4FB3D9;
+			}
 		}
 
 		ul.menu {
-			float: none;
-			width: 100%;
-			position: absolute;
-			top: 100%;
-			left: 0;
-			right: 0;
-			background: #fff;
+			float     : none;
+			width     : 100%;
+			position  : absolute;
+			top       : 100%;
+			left      : 0;
+			right     : 0;
+			background: rgba(255, 255, 255, 0.75);
 
 			&>li {
-				float: none;
-				display: none;
+				float     : none;
+				display   : none;
 				border-top: 1px solid #f1f1f1;
 			}
-			&>li>a {
-				color: #222;
+
+			&>li {
+				&>a {
+					color: #222;
+				}
+
+				&:hover>a {
+					color: #4FB3D9;
+				}
 			}
 
 			ul {
-				position: static;
-				left: auto;
-				top: auto;
+				position  : static;
+				left      : auto;
+				top       : auto;
 				visibility: visible;
-				display: none;
-				width: auto;
+				display   : none;
+				width     : auto;
 
 				li {
 					&.parent>a:after {
@@ -224,11 +274,11 @@
 
 		&.active,
 		&:hover {
-			background: #fff;
-			color: #222;
+			background: #2D3E50;
+			color     : #222;
 
 			ul.menu>li {
-				display: block;
+				display   : block;
 				text-align: center;
 			}
 		}
