--- a/app/templates/mytemplate/less/_menu.less
+++ b/app/templates/mytemplate/less/_menu.less
@@ -32,11 +32,11 @@
 	}
 
 	ul.menu {
-		z-index     : 797;
 		float       : right;
+		z-index     : 797;
 		padding     : 0;
 		font-weight : 400;
-		width       : 50%;
+		width       : 45%;
 		margin-right: auto;
 
 		span.separator {
@@ -49,12 +49,11 @@
 			display       : block;
 			border        : none;
 			color         : rgba(255, 255, 255, 0.75);
-			font-size     : 1em;
 			text-transform: uppercase;
 			font-weight   : 500;
 			letter-spacing: 0.075em;
 			padding       : 0 1em;
-			line-height   : 4em;
+			line-height   : 64px;
 		}
 
 		li {
@@ -167,17 +166,52 @@
 	}
 }
 
+#external {
+	float: right;
+
+	li {
+		display   : inline;
+		list-style: none;
+	}
+
+	a:hover {
+		border-bottom: none;
+	}
+
+	img {
+		// compliance with branding requirements, but don't make it larger
+		min-width : 32px;
+		min-height: 32px;
+		max-width : 32px;
+		max-height: 32px;
+		margin    : 16px;
+	}
+}
+
+@media (max-width: 32.75em) {
+	#nav {
+		margin-left : auto;
+		margin-right: auto;
+		width       : 100%;
+	}
+}
+
+@media (min-width: 32.75em) and (max-width: 60em) {
+	#nav {
+		float: left;
+	}
+}
+
 @media (max-width: 60em) {
 	#nav {
-		float : left;
 		cursor: pointer;
 
 		&:before {
 			content    : "\f036";
 			font-family: "Fontcons";
-			font-size  : 1.5em;
-			padding    : 0.85em 0.9em 0.8em 0.9em;
-			display    : block;
+			font-size  : 1.6em;
+			padding    : 1.2em 0.9em 0.8em 0.9em;
+			display    : inline-block;
 			color      : rgba(255, 255, 255, 0.75);
 
 			&:hover {
