--- a/app/templates/mytemplate/less/_category_blog.less
+++ b/app/templates/mytemplate/less/_category_blog.less
@@ -15,7 +15,7 @@
 }
 
 @media (max-width: 500px) {
-    .blog>.pagination{
+    .blog>.pagination, .inner .contentpaneopen>* {
         width: 100%;
     }
 
@@ -25,9 +25,14 @@
 }
 
 @media (min-width: 501px) and (max-width: 1000px) {
-    .blog>.pagination{
+    .blog>.pagination, .inner:not(.withmenu) .contentpaneopen>* {
         width: ~"calc(100% - 0.6 * (100vw - 500px))";
         margin-left: auto;
+        margin-right: auto;
+    }
+
+    .inner.withmenu .contentpaneopen>*:not(img) {
+        width: ~"calc(100% - 0.6 * (100vw - 500px))";
         margin-right: auto;
     }
     
@@ -37,9 +42,14 @@
 }
 
 @media (min-width: 1001px) {
-    .blog>.pagination{
+    .blog>.pagination, .inner:not(.withmenu) .contentpaneopen>* {
         width: 66%;
         margin-left: auto;
+        margin-right: auto;
+    }
+
+    .inner.withmenu .contentpaneopen>*:not(img) {
+        width: 66%;
         margin-right: auto;
     }
 
