--- a/app/templates/mytemplate/less/index.less
+++ b/app/templates/mytemplate/less/index.less
@@ -541,7 +541,7 @@ header.content-header ul,
 }
 
 // Category Blog styling for leading articles
-@import "_category_blog.less";
+@import "_article_presentation.less";
 
 // Utilities
 @import "../../../../core/assets/less/utilities.less";
