Changed header presentation for more consistency

--- a/app/templates/landing/less/_breadcrumbs.less
+++ b/app/templates/landing/less/_breadcrumbs.less
@@ -13,6 +13,9 @@
 	padding-top: 4em;
 }
 #sub-masthead {
+	background: #2D3E50;
+	color     : #444;
+
 	margin: 0;
 	padding: 0 @spacing;
 
@@ -26,9 +29,6 @@
 
 	&.fixed {
 		margin: 4.75em 0 0 0;
-	}
-	&:hover {
-		background: rgba(0, 0, 0, 0.1);
 	}
 }
 // Breadcrumbs
