--- a/app/templates/mytemplate/less/_breadcrumbs.less
+++ b/app/templates/mytemplate/less/_breadcrumbs.less
@@ -11,7 +11,11 @@
 #top {
 	padding-top: 4em;
 }
+
 #sub-masthead {
+	background: #2D3E50;
+	color     : #444;
+	
 	margin: 0;
 	padding: 0 @spacing;
 
@@ -26,10 +30,8 @@
 	&.fixed {
 		margin: 4.75em 0 0 0;
 	}
-	&:hover {
-		background: rgba(0, 0, 0, 0.1);
-	}
 }
+
 // Breadcrumbs
 #trail {
 	margin: 0 7em 0 0;
