--- a/app/plugins/members/objectstorage/assets/css/objectstorage.css
+++ b/app/plugins/members/objectstorage/assets/css/objectstorage.css
@@ -49,23 +49,8 @@ li::marker {
     border-bottom: 1px solid rgb(204, 204, 204);
 }
 
-#file-actions {
-    flex-grow  : .15;
-    margin-left: 5em;
-    font-size  : medium;
-}
-
-#file-actions>.description {
-    text-align    : center;
-    padding-top   : 1em;
-    padding-bottom: 1em;
-    background    : rgb(102, 102, 102);
-    color         : #fff;
-    border-radius : .5em;
-}
-
-#file-actions>ul {
-    text-align: left;
+.actions {
+    margin-left: .9em;
 }
 
 #settings {
@@ -84,42 +69,53 @@ li::marker {
 }
 
 .item {
-    width: 35em;
-    display: flex;
-    flex-direction: row;
+    width          : auto;
+    display        : flex;
+    flex-direction : row;
     justify-content: space-between;
-    border: transparent;
-    cursor: pointer;
+    border         : transparent;
+    cursor         : pointer;
+    margin-right   : 1em;
 }
 
-.item:hover :not(.buttons, button)  {
-    border-radius: 5px;
-    background-color: rgb(192,192,192);
+.item:hover :not(.buttons, button),
+#up:hover {
+    border-radius   : 5px;
+    background-color: rgb(192, 192, 192);
 }
 
-.item > a {
-    flex: 1 1 75%; 
+.item>a {
+    flex: 1 1 75%;
 }
 
-.item > a, .item button, #up { 
-    padding: 1em;
+.item>a,
+.item button,
+#up {
+    padding    : 1em;
     line-height: 2.5em;
 }
 
-.item > a::before, #up::before{
+#up {
+    margin-left: 2em;
+    width      : 42em;
+}
+
+.item>a::before,
+#up::before {
     margin-right: .7em;
 }
 
-.item > a:hover, #up:hover{
+.item>a:hover,
+#up:hover {
     border-bottom: none;
 }
 
 .item button {
-    border-radius: 5px;
+    border-radius   : 5px;
     background-color: #ddd;
-    margin: 1px;
-    margin-left: .2em;
-    margin-bottom: .2em;
+    margin          : 1px;
+    margin-left     : .2em;
+    margin-bottom   : .2em;
 }
 
 
@@ -132,8 +128,8 @@ li::marker {
 }
 
 .buttons {
-    display: flex;
-    flex: 1 0 20%;
+    display  : flex;
+    flex     : 1 0 20%;
     flex-wrap: nowrap;
 }
 
@@ -141,43 +137,75 @@ li::marker {
     display: flex;
 }
 
-.fileUpload > label {
-    width: 8em;
-}
-
-.fileUpload > input {
-    width: 24em;
+#filebrowser {
+    height    : 55em;
+    width     : auto;
+    min-width : 30em;
+    max-width : 45em;
+    overflow-y: auto;
 }
 
 ul li {
-    margin-top: 0;
+    margin-top   : 0;
     margin-bottom: 0;
 }
 
-.s3-content {
+.hide-input {
+    width   : 0.1px;
+    height  : 0.1px;
+    opacity : 0;
+    overflow: hidden;
+    position: absolute;
+    z-index : -1;
+}
+
+.hide-input+label {
+    text-align      : center;
+    margin-right    : 0.4em;
+    padding-top     : 0.6em;
+    background-color: #ddd;
+}
+
+.hide-input:focus+label,
+.hide-input+label:hover,
+#s3-upload>button:hover,
+#s3-upload>button:focus,
+.settings:hover,
+.settings:focus {
+    color           : #fff;
+    background-color: #ff1d1d;
+}
+
+#s3-upload {
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: left;
 }
 
-.s3-content .actions {
-    margin-left: 2em;
-    padding: 1em;
+#s3-upload>button,
+#s3-upload label {
+    width        : 10em;
+    height       : 3em;
+    border       : 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
 }
 
-.s3-content .filebrowser {
-    padding: 1em;
+#s3-settings {
+    width: 25em;
 }
 
-progress {
-  /* style rules */
+#s3-settings>input {
+    border-radius: 4px;
 }
-progress::-webkit-progress-bar {
-  /* style rules */
+
+.location {
+    margin-left: 1em;
+    font-weight: bold;
 }
-progress::-webkit-progress-value {
-  /* style rules */
-}
-progress::-moz-progress-bar {
-  /* style rules */
+
+.settings {
+    float: right;
+    font-size: medium;
+    background-color: #ddd;
+    padding: .5em;
+    border: solid rgba(0,0,0,0.15) 1px;
+    border-radius: .5em;
 }
