--- a/app/plugins/members/objectstorage/assets/css/objectstorage.css
+++ b/app/plugins/members/objectstorage/assets/css/objectstorage.css
@@ -209,3 +209,7 @@ ul li {
     border: solid rgba(0,0,0,0.15) 1px;
     border-radius: .5em;
 }
+
+#updated, #no-buckets {
+    font-weight: bold;
+}
