--- a/app/templates/mytemplate/less/_article_presentation.less
+++ b/app/templates/mytemplate/less/_article_presentation.less
@@ -8,10 +8,11 @@
     padding-top  : .1em;
     padding-left : 1em;
     padding-right: 1em;
-    margin-bottom: .5em;
+    margin-bottom: .8em;
     border-radius: .5em;
     margin-left  : auto;
     margin-right : auto;
+    overflow     : scroll;
 }
 
 @media (max-width: 500px) {
