--- a/app/templates/landing/less/index.less
+++ b/app/templates/landing/less/index.less
@@ -551,6 +551,9 @@
 // Utilities
 @import "../../../../core/assets/less/utilities.less";
 
+// module styling
+@import "_modules.less";
+
 // Dark header
 @import "_dark.less";
 
