--- a/app/templates/mytemplate/less/index.less
+++ b/app/templates/mytemplate/less/index.less
@@ -543,6 +543,9 @@ header.content-header ul,
 // Category Blog styling for leading articles
 @import "_article_presentation.less";
 
+// module styling
+@import "_modules.less";
+
 // Utilities
 @import "../../../../core/assets/less/utilities.less";
 
