Fixed some menu inconsistencies

--- a/app/templates/mytemplate/less/_masthead.less
+++ b/app/templates/mytemplate/less/_masthead.less
@@ -56,6 +56,10 @@
 	}
 }
 
+#logos {
+	list-style: none;
+}
+
 @media (min-width: 40em) {
 	#masthead {
 		position: fixed;
@@ -70,7 +74,7 @@
 	}
 }
 
-@media (max-width: 31.24em) {
+@media (max-width: 32.99em) {
 
 	h1 {
 		display        : flex;
@@ -96,7 +100,7 @@
 	}
 }
 
-@media (min-width: 31.25em) and (max-width: 40em) {
+@media (min-width: 33em) and (max-width: 39.99em) {
 	h1 {
 		flex-basis: 50%;
 		order     : 1;
